--- a/FE/hightstar/src/admin/css/sidebar.css
+++ b/FE/hightstar/src/admin/css/sidebar.css
@@ -4,7 +4,8 @@
   position: fixed; /* Đảm bảo sidebar được cố định */
   top: 0;
   left: 0;
-  height: 100vh;
+  bottom: 0;
+  max-height: 100%;
   background-color: #212631;
   transition: transform 0.3s ease; /* Hiệu ứng chuyển động */
   z-index: 999; /* Đảm bảo sidebar ở trên */
