Thêm tính năng table mở rộng cho responsive

--- a/FE/hightstar/src/admin/css/table-management.css
+++ b/FE/hightstar/src/admin/css/table-management.css
@@ -9,22 +9,48 @@
   overflow: hidden;
 }
 
-.table__management table .btn__edit:hover{
-  color: #0026ff;
+.table__management table .btn__edit {
+  color: rgb(9, 170, 9);
+  transition: 0.3s;
+  border: none;
 }
 
-.table__management table .btn__delete{
-  color: rgb(155, 39, 39);
+.table__management table .btn__edit:hover {
+  color: rgb(12, 94, 12);
 }
 
-.table__management table .btn__delete:hover{
+.table__management table .btn__delete {
   color: red;
+  transition: 0.3s;
+  border: none;
 }
 
-.table__management .pagination .page-item .page-link{
+.table__management table .btn__delete:hover {
+  color: rgb(167, 40, 40);
+}
+
+.table__management table .btn__show {
+  color: blue;
+  transition: 0.3s;
+  border: none;
+}
+
+.table__management table .btn__show:hover {
+  color: rgb(25, 97, 25);
+}
+
+.table__management .pagination .page-item .page-link {
   padding: 4px 10px;
 }
 
 .table__management .pagination .page-item.active .page-link {
-  color: #ffffff; 
+  color: #ffffff;
+}
+
+.table__management table .expand-row li {
+  border-bottom: 1px dashed rgba(128, 128, 128, 0.288);
+}
+
+.table__management table .expand-row li:last-child {
+  border-bottom: none;
 }
