fix code table resposive

--- a/FE/hightstar/src/admin/css/table-management.css
+++ b/FE/hightstar/src/admin/css/table-management.css
@@ -4,6 +4,7 @@
 
 .table__management table td,
 .table__management table th {
+  max-width: 250px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
