--- a/FE/hightstar/src/admin/css/table-management.css
+++ b/FE/hightstar/src/admin/css/table-management.css
@@ -1,5 +1,6 @@
 .table__management .table-responsive {
-  -webkit-overflow-scrolling: touch; /* smooth scrolling on mobile */
+  -webkit-overflow-scrolling: touch;
+  /* smooth scrolling on mobile */
 }
 
 .table__management table td,
@@ -14,7 +15,7 @@
   color: rgb(53, 122, 53);
   transition: 0.3s;
   border: none;
-} 
+}
 
 .table__management table .btn__edit:hover {
   color: rgb(21, 206, 21);
@@ -28,6 +29,16 @@
 
 .table__management table .btn__delete:hover {
   color: rgb(250, 96, 57);
+}
+
+.table__management table .btn__detail {
+  color: rgb(27, 13, 185);
+  transition: 0.3s;
+  border: none;
+}
+
+.table__management table .btn__detail:hover {
+  color: rgb(57, 115, 250);
 }
 
 .table__management table .btn__show {
